--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ServiceSettings": {
     "ServiceName": "Catalog",
-    "Authority": "https://localhost:5003"
+    "Authority": "http://localhost:5002"
   },
   "MongoDbSettings": {
     "Host": "localhost",
@@ -16,5 +16,6 @@
   "RabbitMQSettings": {
     "Host": "localhost"
   },
+  "AllowedOrigin": "http://localhost:3000",
   "AllowedHosts": "*"
 }
