--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ServiceSettings": {
     "ServiceName": "Catalog",
-    "Authority": "http://localhost:5002"
+    "Authority": "https://localhost:5003"
   },
   "MongoDbSettings": {
     "Host": "localhost",
