--- a/Catalog.Service.csproj
+++ b/Catalog.Service.csproj
@@ -18,13 +18,14 @@
   <ItemGroup>
 
 
-	  <PackageReference Include="Common.Library" Version="1.0.11" />
+	  <PackageReference Include="Common.Library" Version="1.0.12" />
 	  <PackageReference Include="Catalog.Contracts" Version="1.0.2" />
 	  <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
 	  <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
 	<ItemGroup>
+    <Folder Include="Kubernetes\" />
     <Folder Include="Settings\" />
   </ItemGroup>
 
