--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,14 @@
   "RabbitMQSettings": {
     "Host": "localhost"
   },
+  "JaegerSettings": {
+    "Host": "localhost",
+    "Port": "14317"
+  },
+  "SeqSettings": {
+    "Host": "localhost",
+    "Port": "5341"
+  },
   "AllowedOrigin": "http://localhost:3000",
   "AllowedHosts": "*"
 }
